--- a/start-Q/style.css
+++ b/start-Q/style.css
@@ -1,13 +1,100 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+header {
+  background-color: #292828;
+  position: fixed;
+  padding: 15px 0;
+  width: 100%;
+}
+header .menu {
+  padding: 10px 0;
+}
+header .menu .imgbox {
+  width: 200px;
+}
+header .menu nav a {
+  font-size: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+  color: white;
+}
+header .menu nav a:hover {
+  color: #f1ff2e;
+}
+header .menu .box {
+  border: 2px solid #8b8989;
+  padding: 12px;
+  border-radius: 5px;
+  display: none;
+}
+header .menu .box h1 {
+  color: #818181;
+  font-size: 25px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+header .menu .box .icon {
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
+@media screen and (max-width: 998px) {
+  header .menu {
+    padding: 18px 0;
+  }
+  header .menu nav {
+    display: none;
+  }
+  header .menu .box {
+    display: block;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
+#nice {
+  min-height: 100vh;
+  background-image: url(https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg);
+  background-position: center center;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+#nice .textbox h1 {
+  font-size: 30px;
+}
+#nice .textbox h3 {
+  font-size: 70px;
+  font-weight: 700;
+  margin: 25px 0 55px;
+}
+#nice .textbox .btn {
+  padding: 20px 50px;
+  background-color: #d6a801;
+  font-size: 20px;
+  color: #fff;
+  font-weight: 700;
+  transition: 300ms background-color;
+}
+#nice .textbox .btn:hover {
+  background-color: #d6a801;
+}
+@media screen and (max-width: 768px) {
+  #nice .textbox h1 {
+    font-size: 25px;
+  }
+  #nice .textbox h3 {
+    font-size: 45px;
+  }
+}/*# sourceMappingURL=style.css.map */
