--- a/start-Q/_nice.sass
+++ b/start-Q/_nice.sass
@@ -1,11 +1,11 @@
 #nice
-    min-height: 100vh
+    min-height: 120vh
     background-image: url(https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg)
-    background-position: center center
     background-size: cover
-    color: #fff
+    color: #ffff
     display: flex
     align-items: center
+    background-position: center
     .textbox
         h1
             font-size: 30px
@@ -18,14 +18,19 @@
             background-color: #d6a801
             font-size: 20px
             color: #fff
-            font-weight: 700
-            transition: 300ms background-color
             &:hover
                 background-color: #d6a801
 
     @media screen and ( max-width: 768px )
         .textbox
             h1
-                font-size: 25px
+                font-size: 20px           
             h3
-                font-size: 45px
+                font-size: 50px
+                margin: 25px 0 55px
+            .btn
+                padding: 20px 50px
+                background-color: #d6a801
+                font-size: 20px
+                color: #ffff
+
