--- a/start-Q/style.css
+++ b/start-Q/style.css
@@ -63,13 +63,13 @@ header .menu .box .icon {
 }
 
 #nice {
-  min-height: 100vh;
+  min-height: 120vh;
   background-image: url(https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg);
-  background-position: center center;
   background-size: cover;
-  color: #fff;
+  color: white;
   display: flex;
   align-items: center;
+  background-position: center;
 }
 #nice .textbox h1 {
   font-size: 30px;
@@ -84,17 +84,119 @@ header .menu .box .icon {
   background-color: #d6a801;
   font-size: 20px;
   color: #fff;
-  font-weight: 700;
-  transition: 300ms background-color;
 }
 #nice .textbox .btn:hover {
   background-color: #d6a801;
 }
 @media screen and (max-width: 768px) {
   #nice .textbox h1 {
-    font-size: 25px;
+    font-size: 20px;
   }
   #nice .textbox h3 {
-    font-size: 45px;
+    font-size: 50px;
+    margin: 25px 0 55px;
+  }
+  #nice .textbox .btn {
+    padding: 20px 50px;
+    background-color: #d6a801;
+    font-size: 20px;
+    color: white;
+  }
+}
+
+#services {
+  padding-top: 25px;
+}
+#services .textbox h1 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-top: 80px;
+}
+#services .textbox h2 {
+  font-size: 20px;
+  margin: 20px 0 60px;
+  color: #6c757d;
+}
+#services .box {
+  text-align: center;
+  margin-bottom: 80px;
+}
+#services .box h1 {
+  font-size: 30px;
+  font-weight: 700;
+  margin: 18px 0;
+}
+#services .box h3 {
+  font-size: 20px;
+  color: #5e666d;
+  line-height: 1.5;
+}
+#services .box .icon {
+  font-size: 65px;
+  border-radius: 90px;
+  width: 125px;
+  padding: 30px 0;
+  background-color: #fdfa2c;
+  color: white;
+  margin-left: 110px;
+}
+
+#portfolio {
+  padding-top: 35px;
+}
+#portfolio h1 {
+  font-size: 60px;
+  font-weight: 700;
+}
+#portfolio h3 {
+  color: #6c757d;
+  font-size: 25px;
+  margin: 15px 0 50px;
+}
+#portfolio .textbox {
+  text-align: center;
+}
+#portfolio .textbox h2 {
+  font-size: 40px;
+  font-weight: 700;
+  margin-top: 25px;
+}
+#portfolio .imgbox {
+  position: relative;
+  z-index: 1;
+  width: 300px;
+}
+#portfolio .overlay {
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-size: 60px;
+  top: 0;
+  background-color: rgba(255, 200, 0, 0.9);
+  transition: 1s;
+}
+#portfolio .overlay:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  #portfolio h1 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 576px) {
+  #portfolio h1 {
+    font-size: 35px;
+  }
+  #portfolio .textbox h2 {
+    font-size: 26px;
+  }
+  #portfolio h3 {
+    font-size: 22px;
   }
 }/*# sourceMappingURL=style.css.map */
