--- a/start-Q/_main.sass
+++ b/start-Q/_main.sass
@@ -2,6 +2,9 @@ body
     font-family: 'Dosis', sans-serif
     font-weight: 500
 
+section
+    padding-top: 40px
+
 a
     color: orange
     &:hover
