--- a/start-Q/_portfolio.sass
+++ b/start-Q/_portfolio.sass
@@ -1,46 +1,40 @@
 #portfolio
-    padding-top: 35px
+    background-color: #eff6ff
     h1
-        font-size: 60px
+        font-size: 45px
+        color: #212529
         font-weight: 700
     h3
-        color: #6c757d
-        font-size: 25px
-        margin: 15px 0 50px
-    .textbox
-        text-align: center
-        h2
-            font-size: 40px
-            font-weight: 700
-            margin-top: 25px
-    .imgbox
-        position: relative
-        z-index: 1
-        width: 300px
-    .overlay
-        opacity: 0
-        display: flex
-        justify-content: center
-        align-items: center
-        position: absolute
-        width: 100%
-        height: 100%
-        color: #fff
-        font-size: 60px
-        top: 0
-        background-color: rgba(255, 200, 0, 0.9)
-        transition: 1s
-        &:hover
-            opacity: 1
-            cursor: pointer
-    @media screen and ( max-width: 768px )
-        h1
-            font-size: 50px
-    @media screen and ( max-width: 576px )
-        h1
-            font-size: 35px
+        color: #747e88
+        font-size: 20px
+        padding: 20px 
+    .box
+        margin-bottom: 25px
+        .imgbox
+            position: relative
+            img
+                width: 350px
+                height: 300px
+            &:hover
+                .overlay
+                    opacity: 1
+                    width: 350px
+                    height: 300px
+            .overlay
+                display: flex
+                position: absolute
+                top: 0
+                left: 0
+                background-color: #e0b720e6
+                opacity: 0
+                cursor: pointer
+                transition: 300ms opacity
+                width: 350px
+                height: 300px
+                .icon
+                    font-size: 50px
+                    color: #ffff
         .textbox
             h2
-                font-size: 26px
-        h3
-            font-size: 22px
+                font-size: 28px
+                font-weight: 700
